syntax = "proto3";

package ChangePackage;

message ChangeName {
  int32 id = 1;
}
